Step 3.5: Add basic Docker Compose

--- a/apps/.env.dist
+++ b/apps/.env.dist
@@ -1,6 +1,10 @@
 RPC=http://NODE
+BUNDLER=http://BUNDLER
 
 ENTRYPOINT_CONTRACT=0xADDRESS
+WEBAUTHN_CONTRACT=0xADDRESS
+FACTORY_CONTRACT=0xADDRESS
+
 
 BUNDLER_PORT=4337
 BUNDLER_SK=0xSK
