--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,6 +1,9 @@
 [profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
+  src = "src"
+  out = "out"
+  libs = ["lib"]
+  fuzz = { runs = 10_000 }
+  optimizer = true
+  optimizer_runs = 100_000
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
