Step 3.16: Add Paymaster contract

--- a/apps/.env.dist
+++ b/apps/.env.dist
@@ -4,6 +4,7 @@ BUNDLER=http://BUNDLER
 ENTRYPOINT_CONTRACT=0xADDRESS
 WEBAUTHN_CONTRACT=0xADDRESS
 FACTORY_CONTRACT=0xADDRESS
+PAYMASTER_CONTRACT=0xADDRESS
 
 
 BUNDLER_PORT=4337
