Step 4: Add hapi boilerplate for Paymaster Service

--- a/apps/.env.dist
+++ b/apps/.env.dist
@@ -6,8 +6,9 @@ WEBAUTHN_CONTRACT=0xADDRESS
 FACTORY_CONTRACT=0xADDRESS
 PAYMASTER_CONTRACT=0xADDRESS
 
+FRONTEND_PORT=4337
 
-BUNDLER_PORT=4337
+BUNDLER_PORT=4338
 BUNDLER_SK=0xSK
 BUNDLER_BENEFICIARY=0xADDRESS
 BUNDLER_UNSAFE=true
@@ -15,4 +16,5 @@ BUNDLER_MIN_BALANCE=0.01
 BUNDLER_MIN_STAKE=0.01
 
 
-FRONTEND_PORT=4338
+PAYMASTER_PORT=4339
+PAYMASTER_SERVICE=http://PAYMASTER_SERVICE
