Step 4.1: Add basic Paymaster service

--- a/apps/.env.dist
+++ b/apps/.env.dist
@@ -1,5 +1,7 @@
 RPC=http://NODE
 BUNDLER=http://BUNDLER
+PAYMASTER=http://PAYMASTER_SERVICE
+
 
 ENTRYPOINT_CONTRACT=0xADDRESS
 WEBAUTHN_CONTRACT=0xADDRESS
@@ -17,4 +19,4 @@ BUNDLER_MIN_STAKE=0.01
 
 
 PAYMASTER_PORT=4339
-PAYMASTER_SERVICE=http://PAYMASTER_SERVICE
+PAYMASTER_SK=0xSK
