Step 4.3: Add Naming Service

--- a/apps/.env.dist
+++ b/apps/.env.dist
@@ -1,6 +1,7 @@
 RPC=http://NODE
 BUNDLER=http://BUNDLER
 PAYMASTER=http://PAYMASTER_SERVICE
+NAMING_SERVICE=http://NAMING_SERVICE
 
 
 ENTRYPOINT_CONTRACT=0xADDRESS
@@ -20,3 +21,11 @@ BUNDLER_MIN_STAKE=0.01
 
 PAYMASTER_PORT=4339
 PAYMASTER_SK=0xSK
+
+NAMING_SERVICE_PORT=4340
+NAMING_SERVICE_SK=0xSK
+NAMING_SERVICE_START_INDEXING_BLOCK=0
+POSTGRES_USER=user
+POSTGRES_PASSWORD=pwd
+POSTGRES_DB=naming-service-db
+DATABASE_URL="postgresql://user:pwd@naming-service-db:5432/naming-service-db?schema=public"
