Step 4.5: Add NS signature to account deployment in coin-evm-abstraction

--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - VITE_NETWORK=${RPC}
       - VITE_BUNDLER=${BUNDLER}
       - VITE_PAYMASTER=${PAYMASTER}
+      - VITE_NAMING_SERVICE=${NAMING_SERVICE}
       - VITE_ENTRYPOINT=${ENTRYPOINT_CONTRACT}
       - VITE_WALLETFACTORY_CONTRACT=${FACTORY_CONTRACT}
     working_dir: /app
