Step 5: Add Dapp and communication system w/ Ledger Live

--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "live-abstraction",
+  "name": "example-dapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,47 +11,25 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@ledgerhq/coin-evm": "^0.12.1",
-    "@ledgerhq/coin-framework": "^0.11.2",
-    "@ledgerhq/crypto-icons-ui": "^1.0.1",
-    "@ledgerhq/cryptoassets": "^11.4.0",
-    "@ledgerhq/hw-app-eth": "^6.35.4",
-    "@ledgerhq/hw-transport": "^6.30.4",
-    "@ledgerhq/hw-transport-web-ble": "^6.28.4",
-    "@ledgerhq/hw-transport-webusb": "^6.28.3",
-    "@nivo/line": "^0.84.0",
-    "@peculiar/asn1-ecc": "^2.3.8",
     "@rollup/plugin-inject": "^5.0.5",
-    "@simplewebauthn/browser": "^9.0.1",
     "axios": "^1.6.7",
-    "base64url": "^3.0.1",
-    "bignumber.js": "^9.1.2",
-    "cbor": "^9.0.2",
     "classnames": "^2.5.1",
     "color-rgba": "^3.0.0",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.7.2",
-    "framer-motion": "^11.0.12",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "react-select": "^5.8.0",
-    "rxjs": "^7.8.1",
-    "tailwind-merge": "^2.2.1",
-    "uuid": "^9.0.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@ledgerhq/types-cryptoassets": "^7.9.0",
-    "@ledgerhq/types-live": "^6.44.0",
     "@types/color-rgba": "^2.1.2",
     "@types/lodash": "^4.14.202",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
