--- a/apps/ledger-live/package.json
+++ b/apps/ledger-live/package.json
@@ -15,10 +15,11 @@
     "@ledgerhq/coin-framework": "^0.11.2",
     "@ledgerhq/crypto-icons-ui": "^1.0.1",
     "@ledgerhq/cryptoassets": "^11.4.0",
+    "@ledgerhq/devices": "^8.2.2",
     "@ledgerhq/hw-app-eth": "^6.35.4",
     "@ledgerhq/hw-transport": "^6.30.4",
     "@ledgerhq/hw-transport-web-ble": "^6.28.4",
-    "@ledgerhq/hw-transport-webusb": "^6.28.3",
+    "@ledgerhq/hw-transport-webhid": "^6.28.5",
     "@nivo/line": "^0.84.0",
     "@peculiar/asn1-ecc": "^2.3.8",
     "@rollup/plugin-inject": "^5.0.5",
