--- a/apps/.env.dist
+++ b/apps/.env.dist
@@ -2,6 +2,7 @@ RPC=http://NODE
 BUNDLER=http://BUNDLER
 PAYMASTER=http://PAYMASTER_SERVICE
 NAMING_SERVICE=http://NAMING_SERVICE
+MOCK_ANVIL_EXPLORER=http://MOCK_ANVIL_EXPLORER
 
 
 ENTRYPOINT_CONTRACT=0xADDRESS
@@ -29,3 +30,7 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=pwd
 POSTGRES_DB=naming-service-db
 DATABASE_URL="postgresql://user:pwd@naming-service-db:5432/naming-service-db?schema=public"
+
+DAPP_PORT=4341
+
+MOCK_ANVIL_EXPLORER_PORT=4342
