--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,7 @@ PAYMASTER=http://PAYMASTER_SERVICE
 NAMING_SERVICE=http://NAMING_SERVICE
 MOCK_ANVIL_EXPLORER=http://MOCK_ANVIL_EXPLORER
 
+DEPLOYER_SK=0xSK
 
 ENTRYPOINT_CONTRACT=0xADDRESS
 WEBAUTHN_CONTRACT=0xADDRESS
@@ -32,5 +33,6 @@ POSTGRES_DB=naming-service-db
 DATABASE_URL="postgresql://user:pwd@naming-service-db:5432/naming-service-db?schema=public"
 
 DAPP_PORT=4341
+NFT_OWNER_SK=0xSK
 
 MOCK_ANVIL_EXPLORER_PORT=4342
