--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,5 +5,6 @@
   fuzz = { runs = 10_000 }
   optimizer = true
   optimizer_runs = 100_000
+  fs_permissions = [{ access = "read-write", path = "./config"}]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
