--- a/apps/ledger-live/package.json
+++ b/apps/ledger-live/package.json
@@ -16,12 +16,15 @@
     "@ledgerhq/crypto-icons-ui": "^1.0.1",
     "@ledgerhq/cryptoassets": "^11.4.0",
     "@ledgerhq/devices": "^8.2.2",
+    "@ledgerhq/errors": "^6.19.0",
     "@ledgerhq/hw-app-eth": "^6.35.4",
     "@ledgerhq/hw-transport": "^6.30.4",
     "@ledgerhq/hw-transport-web-ble": "^6.28.4",
     "@ledgerhq/hw-transport-webhid": "^6.28.5",
     "@nivo/line": "^0.84.0",
     "@peculiar/asn1-ecc": "^2.3.8",
+    "@peculiar/asn1-schema": "^2.3.13",
+    "@peculiar/asn1-x509": "^2.3.13",
     "@rollup/plugin-inject": "^5.0.5",
     "@simplewebauthn/browser": "^9.0.1",
     "axios": "^1.6.7",
@@ -75,6 +78,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.2",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-svgr": "^4.2.0"
-  }
+  },
+  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
